samples/_failures_safe/1761041908_6aaf73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1edb2631.c: In function ‘main’:
./samples/SAFE/__tmp_1edb2631.c:135:5: error: expected identifier or ‘(’ at end of input
  135 |     Matrix
      |     ^~~~~~
./samples/SAFE/__tmp_1edb2631.c:135:5: error: expected declaration or statement at end of input
